# attache

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  man-attache.txt
doc/: how-to-clang-format.md
src/: log.c  log.h  main.c
src/command/: command.c  command.h
src/system/: env.c  env.h
src/tokenizer/: token.c  token.h
src/whoami/: whoami.c  whoami.h
test/: log_test.h  main.c  token_test.h
